--- a/_config.yml
+++ b/_config.yml
@@ -91,14 +91,14 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
+      read_time: false
+      comments: # true
+      share: false
+      related: false
   # _pages
   - scope:
       path: "_pages"
